[package]
name = "journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
chrono = "0.4.31"
serde_json = "1.0.111"
rand = "0.8.5"
dirs = "5.0.1"
